ailproxy/ail-module/ailreader/src/scanner.c
/* Generated by re2c 0.13.5 on Fri Dec 23 17:08:41 2011 */
#line 1 "src/scanner.re"
// -- re2c scanner specification

#define _GNU_SOURCE
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

#define _IN_SCANNER
#include "scanner.h"
#include "parser.h"

#define YYCTYPE char
#define YYCURSOR (buffer->current)
#define YYLIMIT (buffer->end)
#define YYMARKER (marker)

int scan(scanner_buffer *buffer, scanner_token *token) {

	buffer->start = buffer->current;
	const char * marker;

	while(1) {

	
#line 28 "src/scanner.c"
		{
			YYCTYPE yych;
			unsigned int yyaccept = 0;

			yych = *YYCURSOR;
			switch (yych) {
			case 0x00:	goto yy25;
			case '\t':
			case ' ':	goto yy22;
			case '(':	goto yy8;
			case ')':	goto yy10;
			case '*':
			case '-':
			case '.':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy24;
			case ',':	goto yy18;
			case '/':	goto yy12;
			case ':':	goto yy14;
			case '@':	goto yy16;
			case 'G':	goto yy6;
			case 'P':	goto yy5;
			case 'U':	goto yy4;
			case 'h':	goto yy2;
			case 'v':	goto yy7;
			case '|':	goto yy20;
			default:	goto yy27;
			}
yy2:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case 't':	goto yy43;
			default:	goto yy30;
			}
yy3:
#line 94 "src/scanner.re"
			{
		char *string;

		string = strndup(buffer->start, YYCURSOR - buffer->start);

		token->data.string = string;
		token->id = TOKEN_STRING;

		return SCANNER_RESULT_TOKEN;
	}
#line 131 "src/scanner.c"
yy4:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'R':	goto yy40;
			default:	goto yy30;
			}
yy5:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'O':	goto yy38;
			default:	goto yy30;
			}
yy6:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'E':	goto yy35;
			default:	goto yy30;
			}
yy7:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'o':	goto yy31;
			default:	goto yy30;
			}
yy8:
			++YYCURSOR;
#line 54 "src/scanner.re"
			{
		token->id = TOKEN_ROUND_BRACKET_OPEN;
		return SCANNER_RESULT_TOKEN;
	}
#line 163 "src/scanner.c"
yy10:
			++YYCURSOR;
#line 59 "src/scanner.re"
			{
		token->id = TOKEN_ROUND_BRACKET_CLOSE;
		return SCANNER_RESULT_TOKEN;
	}
#line 171 "src/scanner.c"
yy12:
			++YYCURSOR;
#line 64 "src/scanner.re"
			{
		token->id = TOKEN_SLASH;
		return SCANNER_RESULT_TOKEN;
	}
#line 179 "src/scanner.c"
yy14:
			++YYCURSOR;
#line 69 "src/scanner.re"
			{
		token->id = TOKEN_COLON;
		return SCANNER_RESULT_TOKEN;
	}
#line 187 "src/scanner.c"
yy16:
			++YYCURSOR;
#line 74 "src/scanner.re"
			{
		token->id = TOKEN_AT;
		return SCANNER_RESULT_TOKEN;
	}
#line 195 "src/scanner.c"
yy18:
			++YYCURSOR;
#line 79 "src/scanner.re"
			{
		token->id = TOKEN_COMMA;
		return SCANNER_RESULT_TOKEN;
	}
#line 203 "src/scanner.c"
yy20:
			++YYCURSOR;
#line 84 "src/scanner.re"
			{
		token->id = TOKEN_PIPE;
		return SCANNER_RESULT_TOKEN;
	}
#line 211 "src/scanner.c"
yy22:
			++YYCURSOR;
#line 89 "src/scanner.re"
			{
		buffer->start = buffer->current;
		continue;
	}
#line 219 "src/scanner.c"
yy24:
			yych = *++YYCURSOR;
			goto yy30;
yy25:
			++YYCURSOR;
#line 105 "src/scanner.re"
			{ return SCANNER_RESULT_EOF; }
#line 227 "src/scanner.c"
yy27:
			++YYCURSOR;
#line 107 "src/scanner.re"
			{ return SCANNER_RESULT_ERR; }
#line 232 "src/scanner.c"
yy29:
			++YYCURSOR;
			yych = *YYCURSOR;
yy30:
			switch (yych) {
			case '*':
			case '-':
			case '.':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy29;
			default:	goto yy3;
			}
yy31:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'i':	goto yy32;
			default:	goto yy30;
			}
yy32:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'd':	goto yy33;
			default:	goto yy30;
			}
yy33:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '*':
			case '-':
			case '.':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy29;
			default:	goto yy34;
			}
yy34:
#line 49 "src/scanner.re"
			{
		token->id = TOKEN_VOID;
		return SCANNER_RESULT_TOKEN;
	}
#line 395 "src/scanner.c"
yy35:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'T':	goto yy36;
			default:	goto yy30;
			}
yy36:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '*':
			case '-':
			case '.':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy29;
			default:	goto yy37;
			}
yy37:
#line 44 "src/scanner.re"
			{
		token->id = TOKEN_METHOD;
		return SCANNER_RESULT_TOKEN;
	}
#line 479 "src/scanner.c"
yy38:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'S':	goto yy39;
			default:	goto yy30;
			}
yy39:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'T':	goto yy36;
			default:	goto yy30;
			}
yy40:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'L':	goto yy41;
			default:	goto yy30;
			}
yy41:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '*':
			case '-':
			case '.':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy29;
			default:	goto yy42;
			}
yy42:
#line 39 "src/scanner.re"
			{
		token->id = TOKEN_AIL_START;
		return SCANNER_RESULT_TOKEN;
	}
#line 575 "src/scanner.c"
yy43:
			yych = *++YYCURSOR;
			switch (yych) {
			case 't':	goto yy44;
			default:	goto yy30;
			}
yy44:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'p':	goto yy45;
			default:	goto yy30;
			}
yy45:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case ':':	goto yy47;
			case 's':	goto yy46;
			default:	goto yy30;
			}
yy46:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			switch (yych) {
			case ':':	goto yy47;
			default:	goto yy30;
			}
yy47:
			yych = *++YYCURSOR;
			switch (yych) {
			case '/':	goto yy49;
			default:	goto yy48;
			}
yy48:
			YYCURSOR = YYMARKER;
			switch (yyaccept) {
			case 0: 	goto yy3;
			case 1: 	goto yy53;
			}
yy49:
			yych = *++YYCURSOR;
			switch (yych) {
			case '/':	goto yy50;
			default:	goto yy48;
			}
yy50:
			yych = *++YYCURSOR;
			switch (yych) {
			case '.':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy51;
			default:	goto yy48;
			}
yy51:
			yyaccept = 1;
			YYMARKER = ++YYCURSOR;
			yych = *YYCURSOR;
			switch (yych) {
			case '.':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy51;
			case ':':	goto yy54;
			default:	goto yy53;
			}
yy53:
#line 28 "src/scanner.re"
			{
		char *string;

		string = strndup(buffer->start, YYCURSOR - buffer->start);

		token->data.string = string;
		token->id = TOKEN_DOMAIN;

		return SCANNER_RESULT_TOKEN;
	}
#line 772 "src/scanner.c"
yy54:
			yych = *++YYCURSOR;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy55;
			default:	goto yy48;
			}
yy55:
			++YYCURSOR;
			yych = *YYCURSOR;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy55;
			default:	goto yy53;
			}
		}
#line 108 "src/scanner.re"


	}
}